update portfolio and add readme

--- a/msy.tex
+++ b/msy.tex
@@ -98,7 +98,7 @@
   \item 在项目里推动了 TypeScript 的应用（目前 TS 占全部 JS 文件比例 1/4）
   \item 不断优化前端文件 Gulp / Webpack 构建流程，从 Python 基本迁移至 Node.js
   \item 探索适宜的异步并发解决方案（Promise, React Hooks, RxJS Observable）
-  \item 2019 年开始领导前端团队，工作中执行严格的 code review 规范
+  \item 2019 年开始领导前端团队，工作中执行严格的 Code Review 规范
   \end{itemize}
 }
 \cventry
@@ -135,26 +135,26 @@
 
 \section{社区}
 \cvitemwithcomment
-{JSConf China 2019 Speech: 响应式编程使你看得更远}{}{
+{JSConf China 2019 Speech}{响应式编程使你看得更远}{
   \href{https://2019.jsconfchina.com/}{
     \underline{网址}
   }
 }
-\cvitemwithcomment{InfoQ 采访：掌控前端数据流，响应式编程让你看得更远}{}{
+\cvitemwithcomment{InfoQ 采访}{掌控前端数据流，响应式编程让你看得更远}{
   \href{https://www.infoq.cn/article/kzyb9IEj6iyHegBNrLgd}{
     \underline{网址}
   }
 }
 
 \section{个人项目}
-\cvitemwithcomment{基于 markdown-it 和 pdfmake 的富文本书写工具}{}{
+\cvitemwithcomment{}{基于 markdown-it 和 pdfmake 的富文本书写工具}{
   \href{https://github.com/msyfls123/MaTeX}{
     \underline{仓库}
   }  \href{https://msyfls123.github.io/MaTeX/}{
     \underline{Demo}
   }
 }
-\cvitemwithcomment{企业网站开发与配置}{}{
+\cvitemwithcomment{}{企业网站开发与配置}{
   \href{https://derui-tech.com/}{
     \underline{网址}
   }
@@ -176,8 +176,7 @@
 \section{技能}
 \cvline{框架/库}{React / Backbone / Formik / RxJS / Cycle.js / Svelte}
 \cvline{工具}{Gulp / Webpack / Jest(a bit)}
-\cvline{语言}{
-  TypeScript / Python / GraphQL / Rust(green hand) /
+\cvline{语言}{TypeScript / Python / GraphQL / Rust(green hand) /
   \href{https://github.com/msyfls123/portfolio}{\underline{\LaTeX{}}}
   /
   \href{https://msyfls123.github.io/blog/images/asfaloth.jpeg}{\underline{小程序}
