--- a/msy.tex
+++ b/msy.tex
@@ -81,13 +81,13 @@
 \maketitle
 
 \section{教育}
-\cventry{2014.10\ –\ 2017.6}{硕士}{中国地质大学}{武汉}{\textit{4.13}}{设计学}  % 第3到第6编码可留白
+\cventry{2014.9\ –\ 2017.6}{硕士}{中国地质大学}{武汉}{\textit{4.13}}{设计学}  % 第3到第6编码可留白
 \cventry{2010.9\ –\ 2014.6}{学士}{中国地质大学}{武汉}{\textit{3.62}}{工业设计}
 
 \section{工作经历}
 \cventry
-{2017.7\ –\ 至今}
-{前端工程师}
+{2017.7\ –\ 2020.7}
+{前端开发工程师}
 {\href{https://read.douban.com}{\underline{豆瓣阅读}}}
 {北京}
 {}
@@ -99,6 +99,17 @@
   \item 不断优化前端文件 Gulp / Webpack 构建流程，从 Python 基本迁移至 Node.js
   \item 探索适宜的异步并发解决方案（Promise, React Hooks, RxJS Observable）
   \item 2019 年开始领导前端团队，工作中执行严格的 Code Review 规范
+  \end{itemize}
+}
+\cventry
+{2016.10\ –\ 2017.1}
+{前端实习生}
+{\href{https://read.douban.com}{\underline{豆瓣阅读}}}
+{北京}
+{}
+{
+  \begin{itemize}
+  \item 参与豆瓣阅读 web / mobile 内网页前端的开发测试上线工作
   \end{itemize}
 }
 \cventry
