--- a/msy.tex
+++ b/msy.tex
@@ -90,11 +90,11 @@
 {}
 {
   \begin{itemize}
-  \item 负责腾讯文档桌面端的日常开发与维护，在职期间获得绩效 Outstanding 一次
-  \item 创新性地将 React Portal 与 Electron 结合，打造无加载延迟的多窗口体验
-  \item 通过 IPC 进行 Electron 多实例通讯实现腾讯文档多账号同时登录使用，共享剪贴板
-  \item 管理桌面端 CI/CD 流程，实现无人值守自动构建和半自动化发布
-  \item 基于 Playwright 建立 Electron 的 UI 自动化测试
+  \item 负责腾讯文档桌面端的日常开发与维护，在职期间绩效 5/4/5。
+  \item 整合 PWA 及数据预加载功能，大幅降低端内文档使用时的 TTI（WIP）。
+  \item 通过 React 及 IPC 统一管理了 Electron 窗口的生命周期，\\将单窗口启动速度从 300ms 降低至 100ms。
+  \item 运用 node-api 封装 C++ 数据库供所有主流 CPU 架构系统使用。 
+  \item 管理桌面端 CI/CD 流程，实现无人值守自动构建和半自动化发布与更新。
   \end{itemize}
 }
 
@@ -108,12 +108,11 @@
 {}
 {
   \begin{itemize}
-  \item 负责豆瓣阅读 web / mobile / app 内网页前端的开发测试构建上线工作
-  \item 使用 \href{https://graphene-python.org/}{Graphene} 从零搭建 GraphQL 服务端，统一了书籍、用户信息的查询
-  \item 在项目里推动了 TypeScript 的应用（目前 TS 占全部 JS 文件比例 1/4）
-  \item 不断优化前端文件 Gulp / Webpack 构建流程，从 Python 基本迁移至 Node.js
-  \item 探索适宜的异步并发解决方案（Promise, React Hooks, RxJS Observable）
-  \item 2019 年开始领导前端团队，2016.10\ –\ 2017.1 为实习
+  \item 负责豆瓣阅读网页前端的研发构建工作。
+  \item 使用 \href{https://graphene-python.org/}{Graphene} 从零搭建 GraphQL 服务端，统一了书籍、用户信息的查询。
+  \item 在项目里推动了 TypeScript 的应用（在职时 TS 占全部 JS 文件比例 1/4）。
+  \item 利用多线程提升了 Webpack 及 Terser 的构建效率，耗时降低了 60\%。
+  % \item 2016.10\ –\ 2017.1 为实习
   \end{itemize}
 }
 
@@ -130,18 +129,18 @@
 %   \item 参与豆瓣阅读 web / mobile 内网页前端的开发测试上线工作
 %   \end{itemize}
 % }
-\cventry
-{2016.3\ –\ 2016.7}
-{前端实习生}
-{\href{http://woniu.com}{\underline{蜗牛游戏}}}
-{苏州}
-{}
-{
-  \begin{itemize}
-  \item 编写响应式富交互的游戏活动专题页面
-  \item 参与游戏直播聚合站点及 VR 视频站点的开发
-  \end{itemize}
-}
+% \cventry
+% {2016.3\ –\ 2016.7}
+% {前端实习生}
+% {\href{http://woniu.com}{\underline{蜗牛游戏}}}
+% {苏州}
+% {}
+% {
+%   \begin{itemize}
+%   \item 编写响应式富交互的游戏活动专题页面
+%   \item 参与游戏直播聚合站点及 VR 视频站点的开发
+%   \end{itemize}
+% }
 
 % \cventry{2015.7-10}{设计实习生}{佛山尚致设计有限公司}{佛山}{\url{www.bob-id.com.cn}}{
 % 参与多项平面设计及交互设计工作,利用网络推动公司形象宣传，完成了公司首个众筹产品的发布
@@ -190,6 +189,11 @@
     \underline{网址}
   }
 }
+\cvitemwithcomment{}{Advent of Code 练习册（Rust）}{
+  \href{https://github.com/msyfls123/learn-rust/tree/master/advent_of_code/src}{
+    \underline{网址}
+  }
+}
 
 
 \section{教育}
@@ -212,7 +216,8 @@
 
 \section{技能}
 \cvline{框架/库}{React / RxJS / Cycle.js / Svelte}
-\cvline{跨端}{Electron /
+\cvline{跨端}{
+  \href{https://github.com/msyfls123/diablo2-wiki}{\underline{Electron}} /
   \href{https://github.com/msyfls123/Asfaloth}{\underline{NodeGui}} /
   \href{https://github.com/msyfls123/rust-gui}{\underline{Druid(Rust)}}}
 \cvline{工具}{Git / Gulp / Webpack / Rollup / Jest}
@@ -222,7 +227,7 @@
   \href{https://msyfls123.github.io/blog/images/asfaloth.jpeg}{\underline{小程序}
   }
 }
-\cvline{学习}{WebAssembly Interface / Node.js addons}
+\cvline{学习}{ 图数据库 / 同构 web App }
 
 % \cvitem{前端开发}{\small{熟练应用HTML/CSS/Javascript编写页面，掌握jQuery/AngularJS等前端框架}}
 % \cvitem{后端开发}{\small{熟悉Django/Python框架，能够部署Nginx/MySQL服务器}}
