--- a/msy.tex
+++ b/msy.tex
@@ -41,7 +41,8 @@
 % 个人信息
 \name{马申彦}{}
 \title{前端工程师}                     % 可选项、如不需要可删除本行
-\address{北京市·海淀区}                          % 可选项、如不需要可删除本行
+% \address{北京市·海淀区}                          % 可选项、如不需要可删除本行
+\address{无锡市·梁溪区}                          % 可选项、如不需要可删除本行
 \phone[mobile]{+86~18771058712}              % 可选项、如不需要可删除本行
 % \phone[fixed]{+2~(345)~678~901}               % 可选项、如不需要可删除本行
 % \phone[fax]{+3~(456)~789~012}                 % 可选项、如不需要可删除本行
@@ -52,10 +53,10 @@
 \extrainfo{
   \begin{itemize}
   \item \href{https://github.com/msyfls123}{\underline{GitHub 资料}}
-  \item \href{https://douc.cc/4gK66z}{\underline{豆瓣主页}}
+  % \item \href{https://douc.cc/4gK66z}{\underline{豆瓣主页}}
   \end{itemize}
 }                 % 可选项、如不需要可删除本行
-\photo[64pt][0.4pt]{msy.jpg}                  % ‘64pt’是图片必须压缩至的高度、‘0.4pt‘是图片边框的宽度 (如不需要可调节至0pt)、’picture‘ 是图片文件的名字;可选项、如不需要可删除本行
+\photo[64pt][0.4pt]{avatar.jpg}                  % ‘64pt’是图片必须压缩至的高度、‘0.4pt‘是图片边框的宽度 (如不需要可调节至0pt)、’picture‘ 是图片文件的名字;可选项、如不需要可删除本行
 % \quote{
 %   \small {
 %   想了解更多? - 
@@ -84,17 +85,23 @@
 \section{工作经历}
 \cventry
 {2020.7\ \ –\ \ 至\ 今}
-{前端开发}
+{高级前端开发工程师}
 {\href{https://docs.qq.com}{\underline{腾讯文档}}}
 {北京}
 {}
 {
   \begin{itemize}
-  \item 负责腾讯文档桌面端的日常开发与维护，在职期间绩效 5/4/5。
-  \item 整合 PWA 及数据预加载功能，大幅降低端内文档使用时的 TTI（WIP）。
-  \item 通过 React 及 IPC 统一管理了 Electron 窗口的生命周期，\\将单窗口启动速度从 300ms 降低至 100ms。
-  \item 运用 node-api 封装 C++ 数据库供所有主流 CPU 架构系统使用。 
-  \item 管理桌面端 CI/CD 流程，实现无人值守自动构建和半自动化发布与更新。
+  \item 负责腾讯文档桌面端的日常开发与维护，在职期间绩效 5/4/5/5/3
+  \item 整合 native 及 web 资源，实现单机离线编辑 Office Word / Excel / PPT 文档的功能
+  \item 运用 node-api 封装 C++ 数据库供所有主流 CPU 架构系统使用 
+  \item 整合 PWA 及数据预加载功能，大幅降低端内文档使用时的 TTI
+  \item 通过 React 及 IPC 统一管理了 Electron 窗口的生命周期，\\将单窗口启动速度从 300ms 降低至 100ms
+  \item 管理桌面端 CI / CD 流程，实现无人值守自动构建和半自动化发布
+  % \item 创新性地将 React Portal 与 Electron 结合，打造无加载延迟的多窗口体验
+  % \item 通过 IPC 进行 Electron 多实例通讯实现腾讯文档多账号同时登录使用
+  % \item 使用 node-api 封装 C++ 数据库供 Node.js 使用，实现全平台架构覆盖
+  % \item 基于 Playwright 建立 Electron 的 UI 自动化测试
+  % \item 桌面端 MAU 从零增加至 200w
   \end{itemize}
 }
 
@@ -108,11 +115,12 @@
 {}
 {
   \begin{itemize}
-  \item 负责豆瓣阅读网页前端的研发构建工作。
-  \item 使用 \href{https://graphene-python.org/}{Graphene} 从零搭建 GraphQL 服务端，统一了书籍、用户信息的查询。
-  \item 在项目里推动了 TypeScript 的应用（在职时 TS 占全部 JS 文件比例 1/4）。
-  \item 利用多线程提升了 Webpack 及 Terser 的构建效率，耗时降低了 60\%。
-  % \item 2016.10\ –\ 2017.1 为实习
+  \item 负责豆瓣阅读 web / mobile / app 内网页前端的开发测试构建上线工作
+  \item 使用 \href{https://graphene-python.org/}{Graphene} 从零搭建 GraphQL 服务端，统一了书籍、用户信息的查询
+  \item 在项目里推动了 TypeScript 的应用和规范建设，重构了近 30\% 的历史代码
+  % \item 不断优化前端文件 Gulp / Webpack 构建流程，从 Python 基本迁移至 Node.js
+  % \item 探索适宜的异步并发解决方案（Promise, React Hooks, RxJS Observable）
+  \item 2019 年开始领导前端团队，2016.10\ –\ 2017.1 为实习
   \end{itemize}
 }
 
@@ -184,6 +192,11 @@
     \underline{Demo}
   }
 }
+\cvitemwithcomment{}{为 Electron 应用设计的基于 Cycle.js 的开发框架}{
+  \href{https://github.com/msyfls123/cycle-mega-driver}{
+    \underline{仓库}
+  } 
+}
 \cvitemwithcomment{}{企业网站开发与配置}{
   \href{https://derui-tech.com/}{
     \underline{网址}
@@ -221,13 +234,13 @@
   \href{https://github.com/msyfls123/Asfaloth}{\underline{NodeGui}} /
   \href{https://github.com/msyfls123/rust-gui}{\underline{Druid(Rust)}}}
 \cvline{工具}{Git / Gulp / Webpack / Rollup / Jest}
-\cvline{语言}{TypeScript / Rust / Python / GraphQL /
+\cvline{语言}{TypeScript / Rust / Python / GraphQL / C++（一点点） /
   \href{https://github.com/msyfls123/portfolio}{\underline{\LaTeX{}}}
   /
   \href{https://msyfls123.github.io/blog/images/asfaloth.jpeg}{\underline{小程序}
   }
 }
-\cvline{学习}{ 图数据库 / 同构 web App }
+% \cvline{学习}{WebAssembly Interface / Node.js addons}
 
 % \cvitem{前端开发}{\small{熟练应用HTML/CSS/Javascript编写页面，掌握jQuery/AngularJS等前端框架}}
 % \cvitem{后端开发}{\small{熟悉Django/Python框架，能够部署Nginx/MySQL服务器}}
@@ -239,18 +252,19 @@
 \renewcommand{\listitemsymbol}{-}             % 改变列表符号
 
 \section{介绍}
-\cvitem{爱好}{\small{
-\href{https://movie.douban.com/people/kimimama/collect}{
-  \underline{电影}
-}、
-\href{https://www.douban.com/photos/album/1873642638}{
-  \underline{做饭}
-}、阅读\ 、
-\href{https://www.douban.com/photos/album/155070126/}{
-  \underline{设计 or 画画}
-}
-}}
-\cvitem{一句话}{\small{
+% \cvitem{爱好}{\small{
+% \href{https://movie.douban.com/people/kimimama/collect}{
+%   \underline{电影}
+% }、
+% \href{https://www.douban.com/photos/album/1873642638}{
+%   \underline{做饭}
+% }、阅读\ 、
+% \href{https://www.douban.com/photos/album/155070126/}{
+%   \underline{设计 or 画画}
+% }
+% }}
+\cvitem{爱好}{\small{看电影、烹饪美食、阅读、绘画}}
+\cvitem{一句话介绍}{\small{
 \href{https://www.zhihu.com/question/30068727/answer/46664009}{
   \underline{现在站在你面前的我，并不是幻影呀}
 }
