--- a/msy.tex
+++ b/msy.tex
@@ -91,7 +91,7 @@
 {}
 {
   \begin{itemize}
-  \item 负责腾讯文档桌面端的日常开发与维护，在职期间绩效 5/4/5/5/3
+  \item 负责腾讯文档桌面端的日常开发与维护
   \item 整合 native 及 web 资源，实现单机离线编辑 Office Word / Excel / PPT 文档的功能
   \item 运用 node-api 封装 C++ 数据库供所有主流 CPU 架构系统使用 
   \item 整合 PWA 及数据预加载功能，大幅降低端内文档使用时的 TTI
@@ -263,7 +263,7 @@
 %   \underline{设计 or 画画}
 % }
 % }}
-\cvitem{爱好}{\small{看电影、烹饪美食、阅读、绘画}}
+\cvitem{爱好}{\small{看电影、烹饪美食、阅读、绘画、业余设计师}}
 \cvitem{一句话介绍}{\small{
 \href{https://www.zhihu.com/question/30068727/answer/46664009}{
   \underline{现在站在你面前的我，并不是幻影呀}
