--- a/msy.tex
+++ b/msy.tex
@@ -193,36 +193,49 @@
 % }
 
 \section{项目经历}
-\cventry[2em]{2022.4\ –\ 2023.4}{桌面端本地编辑 Office 文档}{桌面端负责人}
-{\\腾讯文档作为中国市场占有率第一的在线协作编辑应用，在弱网甚至无网环境下如何让用户仍能获得基本的编辑体验是一项长期且宏伟的目标。结合项目发展和既有技术沉淀的考量下，腾讯文档团队联合 web、桌面端和原生引擎三组，打通语言和地域的壁垒，在不到一年的时间内完成了基于 Electron 框架的伪 native 本地编辑功能，让用户无需联网即可完成 Office 文档的浏览与编辑，为办公软件国产化迈出了坚实的一步。\\
-在项目中，我作为桌面端负责人，前期调研并跑通了通过 web 页面操作 Office 文档的 MVP 产品（PPT 部分），在各团队分工排期不清晰的情形下制定出了一套接口规范，为后续 Word / Excel / PDF 等品类接入夯实了基础。通过线上已有数据及竞品分析，确定并实施了全链路的性能监控上报机制。同时主导了多次打开同一文档的数据缓存功能开发，使得用户重复打开同一篇文档的耗时下降约 30\%，并且据此缓存机制提供了文档异常退出或 Office 转换引擎出现错误时用户数据完整性保护功能
+\cventry[2em]{2022.4\ –\ 2023.4}{桌面端本地编辑 Office 文档}{桌面端负责人}{}{}
+{腾讯文档基于 Electron 框架的伪 native 本地编辑功能，让用户无需联网即可完成本地 Office 文档的浏览与编辑，为办公软件国产化迈出了坚实的一步。
+\begin{itemize}
+  \item 项目职责：桌面端负责人，在几无参考资料的情况下输出三端开发接口规范文档，率先跑通 MVP 产品，统筹桌面端相关开发测试、上线发布流程，完成数据通讯、缓存、监控、性能测试等模块的开发工作。
+  \item 项目成果：通过缓存中间数据将用户打开文档的平均时间缩短 1/3，前期性能测试获得与线上一致的 2s 打开文档的耗时中位数，为后续优化提供了实验室数据。同时每日输出报表，本地编辑功能覆盖桌面端大盘 5w 用户。
+\end{itemize}
 }
-{}{}
 
-\cventry[2em]{2021.11\ –\ 2022.1}{移植数据库}{唯一开发者}
-{\\腾讯文档桌面端一经上线就获得了大量用户，同时随着 web 页面的不断迭代，原先采用的 JavaScript 封装数据库方案已经过时且不可维护，至此项目面临两种选择，要么继续为原方案修修补补打补丁，要么接入移动端 C++ 数据库。在综合考量维护成本和迁移风险后，我们选择了接入 C++ 数据库的方案。但该方案最大的瓶颈在于项目中懂 C++ 的工程师人数为 0。\\
-经过简单的沟通，我发现移动端数据库实现并不复杂，只需要调用一个接口即可完成功能的桥接，但因为原本的实现仅支持 iOS 和 Android，这需要前期探索并跑通 Windows/macOS/Linux 三个系统上的构建编译流程。于是我兵分两路，白天根据现有功能代码和构建脚本在公司提供的虚拟机上实验编译，晚上阅读教程手搓一个简单的 node addon 以了解跨语言封装细节。经过两周时间的探索，最终数据库成功地运行在了三个系统多达 8 种不同 CPU 架构上。\\
-但一个跨平台项目最重要的工作是如何让用户平滑地进行迁移，针对新旧两套数据库实现，我又设计了完整的数据发现，数据校验，数据迁移及数据恢复功能，最终在一整年时间内成功帮助两万余名老用户全自动迁移数据库
+
+\cventry[2em]{2021.11\ –\ 2022.1}{移植数据库}{唯一开发者}{}{}
+{
+腾讯文档桌面端数据库（基于 LevelDB）随着 web 页面的不断迭代已经过时且不可维护，项目选择将移动端 C++ SQLite 数据库移植至 JavaScript 环境，以较少的人力实现了覆盖了跨平台全系统的 Node.js 插件。
+\begin{itemize}
+  \item 项目职责：前期调研数据库迁移可行性，定义并实现了封装数据库，部署发布相关 npm 模块，提供用户无感自动化迁移旧数据库数据的方案，同时提供线上数据监控。
+  \item 项目成果：减少 2 人*月的人力开销，使数据库成功地运行在了三个系统多达 8 种不同 CPU 架构上，一年时间内成功帮助两万余名老用户全自动迁移数据库。
+\end{itemize}
 }
-{}{}
 
-\cventry[2em]{2020.3\ –\ 2020.6}{移动端编辑器}{web 负责人}
-{\\豆瓣阅读是豆瓣旗下的原创小说平台产品，随着移动阅读成为年轻人日常娱乐活动之一，文学创作者也会有移动写作的需求。豆瓣阅读本身已经具有桌面端网页富文本编辑器（基于 Draft.js 深度定制），将其适配到移动端 App 内即可快速上线作者编辑能力。\\
-原 web 编辑器在 Draft.js 基础上使用命令模式封装了多种编辑操作，所以适配移动端主要开发工作在于将移动端实现的菜单与 web 编辑器进行桥接，我撰写了完整的双向通信协议和接口类型，同时对 web 编辑器与 UI 耦合部分进行重构。在联调过程中，帮助客户端开发同学梳理了项目早前定义好的 JSBridge 注入机制。项目已发布且运行良好}
-{}{}
-
-\cventry[2em]{2018.5\ –\ 2018.7}{热门小说小程序}{唯一开发者}
-{\\豆瓣阅读网站上有很多连载小说，它们一般会以一个较为固定的周期更新最新章节，通过消息推送触达用户的机制仍不够完美且不能够满足用户主动发现并轻量阅读的需求，于是小程序作为一种新的日常阅读形式映入我们的眼帘。\\
-小程序发布于 2016 年，2018 年时 API 已基本完善。在接到任务后，我将整个项目分为三部分，小程序主体功能的开发，小程序后台的开发以及小程序备案上线的工作。其中主体功能分为小程序 UI \& 逻辑 + 后端接口改造，利用现有图书接口经过微信 Open ID 转化鉴权后输出小说的内容数据，小程序端接收到数据进行 tokenize 并解析成小程序内 UI 组件树进行渲染。第二部分是小程序内容的管理后台，复用前一步的数据对每周发布的小说列表进行展示，并提供 CRUD 功能。\\
-小程序的上线，经历了一系列审核相关波折，以及团队间努力磋商，最终成功发布，最高获得了单日 5W PV 的访问量}
-{}{}
-
-\cventry[2em]{2018.10\ –\ 2019.3}{电子书筛选功能}{主要开发者}
-{\\豆瓣阅读在线书店经历了 web 门户时代、feed 流推荐时代，最终过渡到了“聚合推荐发现搜索多种浏览方式的新书店”时代，与之配套的强力电子书搜索筛选功能也变得迫在眉睫。后端率先进行技术升级，使用 ElasticSearch 优化了老旧的 SQL 查询，前端也不甘示弱，通过 GraphQL 整合电子书 meta 信息，一次查询便可得到多级嵌套多维度的信息。\\
-筛选与搜索一脉相承，在开发组件时就考虑到之后的搭配问题，将 UI props 和 GraphQL query 一一对应，这样在上层调用时便可自由组合。因为图书本身分类是多层嵌套的，分类筛选器以递归方式进行设计，逐级展开。为了让用户一次筛选的结果可以被方便地分享，我设计了一套基于 URL 的 form 数据序列化/反序列化机制，并针对交叉字段做了优化，尽可能提升字段间的正交性。\\
-在完成逻辑功能的同时，我也感受到 React 在处理异步数据时可能存在 UI 与逻辑不一致的问题，于是在数据极快就绪时隐藏掉多余的转场动画，在功能上不谋而合地实现了类似 React Concurrent Mode 的效果，让用户体验更上一层楼
+\cventry[2em]{2018.10\ –\ 2019.3}{统一 GraphQL API 接口}{主要开发者}{}{}
+{豆瓣阅读上的图书查询 API 数量繁多且有大量重复字段，在不同页面不同部件渲染时均需拉取多个 API 数据进行整合，前端尝试整合后端数据资源增添 GraphQL 视图层以供统一查询，减少页面请求并发数。
+\begin{itemize}
+  \item 项目职责：进行 GraphQL 技术选型，根据项目拆分模型 schema，从零搭建 API，编写脚手架工具。
+  \item 项目成果：用户访问网站主要功能页面对作品类信息仅需一次查询，后端废弃约 20+ 接口，统一管理 API 字段。
+\end{itemize}
 }
-{}{}
+
+
+\cventry[2em]{2018.5\ –\ 2018.7}{热门小说小程序}{唯一开发者}{}{}
+{豆瓣阅读网站上有很多连载小说，它们一般会以一个较为固定的周期更新最新章节，通过消息推送触达用户的机制仍不够完美且不能够满足用户主动发现并轻量阅读的需求，于是小程序作为一种新的日常阅读形式映入我们的眼帘。
+\begin{itemize}
+  \item 项目职责：小程序的调研与技术选型，后端接口改造与管理后台开发，富文本渲染方案设计与实施，小程序的备案上线工作。
+  \item 项目成果：最高获得了单日 5W PV 的访问量，目前仍可每月为公司获得营收。
+\end{itemize}
+}
+
+
+\cventry[2em]{2018.10\ –\ 2019.3}{电子书筛选功能}{主要开发者}{}{}
+{豆瓣阅读在线书店经历了 web 门户时代、feed 流推荐时代，最终过渡到了“聚合推荐发现搜索多种浏览方式的新书店”时代，与之配套的强力电子书搜索筛选功能也变得迫在眉睫。
+\begin{itemize}
+  \item 项目职责：优化组件开发流程，定义基于 URL 实现的电子书检索链接形式，以递归、lazy render 等方式提升 React 组件渲染性能。
+  \item 项目成果：以 React 取代 html 组件获得交互性和复用性，用户可以以多种方式检索自己想看的电子书了。
+\end{itemize}
+}
 
 \section{个人项目}
 \cvitemwithcomment{}{基于 markdown-it 和 pdfmake 的富文本书写工具}{
@@ -285,11 +298,11 @@
 
 \cvskillentry*{React}{4}{库}{7}{}
 \cvskillentry*{RxJS}{4}{库}{5}{}
-\cvskillentry*{Cycle.js}{3}{库}{4}{非常喜欢它的世界观}
+\cvskillentry*{Cycle.js}{3}{库}{4}{}
 % \cvskillentry*{Svelte}{3}{库}{3}{}
 \cvskillentry*{Webpack}{3}{库}{7}{}
 \cvskillentry*{Electron}{5}{框架}{3}{}
-\cvskillentry*{Rust}{2}{语言}{4}{业余时间很喜欢}
+\cvskillentry*{Rust}{2}{语言}{4}{做了一些业务项目}
 \cvskillentry*{TypeScript}{5}{语言}{5}{}
 \cvskillentry*{Python}{3}{语言}{7}{}
 \cvskillentry*{Git}{3}{工具}{7}{}
