--- a/msy.tex
+++ b/msy.tex
@@ -43,7 +43,8 @@
 \title{前端工程师}                     % 可选项、如不需要可删除本行
 % \address{北京市·海淀区}                          % 可选项、如不需要可删除本行
 % \address{无锡市·梁溪区}                          % 可选项、如不需要可删除本行
-\address{上海市·浦东新区}
+% \address{上海市·浦东新区}
+\address{杭州市·滨江区}
 \phone[mobile]{+86~18771058712}              % 可选项、如不需要可删除本行
 % \phone[fixed]{+2~(345)~678~901}               % 可选项、如不需要可删除本行
 % \phone[fax]{+3~(456)~789~012}                 % 可选项、如不需要可删除本行
@@ -85,7 +86,7 @@
 
 \section{工作经历}
 \cventry
-{2023.10\ \ –\ \ 至\ 今}
+{2023.10\ \ –\ 2024.10}
 {高级前端工程师}
 {\href{https://write.qq.com}{\underline{阅文集团·作家助手}}}
 {上海}
